# server/swagger_server/models/__init__.py
@@ -3,20 +3,17 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.all_ofreview_movie_id import AllOfreviewMovieId
-from swagger_server.models.all_ofreview_show_id import AllOfreviewShowId
 from swagger_server.models.comment import Comment
+from swagger_server.models.comment_id import CommentId
 from swagger_server.models.id import Id
 from swagger_server.models.id1 import Id1
 from swagger_server.models.id2 import Id2
 from swagger_server.models.inline_response200 import InlineResponse200
 from swagger_server.models.movie import Movie
 from swagger_server.models.movie_id import MovieId
-from swagger_server.models.movie_id1 import MovieId1
 from swagger_server.models.review import Review
 from swagger_server.models.review_id import ReviewId
 from swagger_server.models.show_id import ShowId
-from swagger_server.models.show_id1 import ShowId1
 from swagger_server.models.title import Title
 from swagger_server.models.tvshow import Tvshow
 from swagger_server.models.user import User
