# server/swagger_server/models/comment_id.py
@@ -6,17 +6,16 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
-from swagger_server.models.show_id import ShowId  # noqa: F401,E501
 from swagger_server import util
 
 
-class AllOfreviewShowId(Model):
+class CommentId(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
     def __init__(self):  # noqa: E501
-        """AllOfreviewShowId - a model defined in Swagger
+        """CommentId - a model defined in Swagger
 
         """
         self.swagger_types = {
@@ -26,12 +25,12 @@ class AllOfreviewShowId(Model):
         }
 
     @classmethod
-    def from_dict(cls, dikt) -> 'AllOfreviewShowId':
+    def from_dict(cls, dikt) -> 'CommentId':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The AllOfreviewShowId of this AllOfreviewShowId.  # noqa: E501
-        :rtype: AllOfreviewShowId
+        :return: The comment_id of this CommentId.  # noqa: E501
+        :rtype: CommentId
         """
         return util.deserialize_model(dikt, cls)
