# server/swagger_server/models/show_id1.py
@@ -1,37 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from swagger_server.models.base_model_ import Model
-from swagger_server.models.show_id import ShowId  # noqa: F401,E501
-from swagger_server import util
-
-
-class ShowId1(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-    def __init__(self):  # noqa: E501
-        """ShowId1 - a model defined in Swagger
-
-        """
-        self.swagger_types = {
-        }
-
-        self.attribute_map = {
-        }
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'ShowId1':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The show_id_1 of this ShowId1.  # noqa: E501
-        :rtype: ShowId1
-        """
-        return util.deserialize_model(dikt, cls)
